--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -36,33 +36,38 @@
     </div>
 </section>
 
-        @foreach (var item in Model)
+<section>
+<div class="row">
+<div class="boxes">
+
+@foreach (var item in Model)
         {
 
-            <section>
-                <div class="row">
-                    <div class="boxes">
-                        <article class="col-xs-3 panel">
-                            <section class="panel-img-container">
-                                <img src="@Html.DisplayFor(modelItem => item.MessageImage)" alt="House" class="panel-img" />
-                            </section>
-                            <section>
-                                <p class="quicksand-light-32 panel-heading">@Html.DisplayFor(modelItem => item.MessageHeader)</p>
-                            </section>
-                            <section>
-                                <p class="mont-light-light-18 panel-summary">Located in the heart of downtown Ogdece a. @Html.DisplayFor(modelItem => item.Message)</p>
-                            </section>
-                            <section class="panel-footer">
-                                <p class="quicksand-light-24-green"><a href="#">Learn more ></a></p>
-                            </section>
-                        </article>
-                    </div>
-                </div>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </section>
+            
+            <article class="col-xs-3 panel">
+                <section class="panel-img-container">
+                    <img src="@Html.DisplayFor(modelItem => item.MessageImage)" alt="House" class="panel-img" />
+                </section>
+                <section>
+                    <p class="quicksand-light-32 panel-heading">@Html.DisplayFor(modelItem => item.MessageHeader)</p>
+                </section>
+                <section>
+                    <p class="mont-light-light-18 panel-summary">@Html.DisplayFor(modelItem => item.Message)</p>
+                </section>
+                <section class="panel-footer">
+                    <p class="quicksand-light-24-green"><a href="#">Learn more ></a></p>
+                </section>
+            </article>
+            @*<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                                                                      <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                                                                      <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
+                    
         }
+    
+        </div>
+    </div>
+    
+</section>
 
 
 
