--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -58,9 +58,9 @@
                     <p class="quicksand-light-24-green"><a href="#">Learn more ></a></p>
                 </section>
             </article>
-            @*<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                                                                      <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                                                                      <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
+            @*<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> 
+              <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+              <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
                     
         }
     
