Added angular and angular content editable scripts to layout

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -109,7 +109,9 @@
         <script src="~/js/secondaryScripts.js" asp-append-version="true"></script>
         <script src="~/js/gen_validatorv31.js" asp-append-version="true"></script>
         <script src="~/js/login.js" asp-append-version="true"></script>
-
+        <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular-content-editable/dist/angular-content-editable.js"></script>
+        
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
