--- a/MyYouthFutures/Views/Shared/Components/Services/Default.cshtml
+++ b/MyYouthFutures/Views/Shared/Components/Services/Default.cshtml
@@ -3,8 +3,8 @@
 <section class="container-fluid services">
     <div class="row">
         <div class="col-xs-12">
-            <h4 class="services-heading">Services</h4>
-            <p class="mont-light-light-22 about-services"  ng-model ="ServicesDescription" edit-callback="editFunction(text, elem)" content-editable>Our programming is divided into three main areas. Each program area has specific components to meet the needs of the youth in need.<button ng-show="showSave">Save</button></p>
+            <h4 class="services-heading" ng-model ="ServicesTitle" edit-callback="editMade(text, elem)" content-editable>Services</h4>
+            <p class="mont-light-light-22 about-services"  ng-model ="ServicesSubtitle" edit-callback="editMade(text, elem)" content-editable ng-click ="ngShow=true">Our programming is divided into three main areas. Each program area has specific components to meet the needs of the youth in need.<button ng-show="showSave" class ="ng-hide">Save</button></p>
         </div>
     </div>
 </section>
@@ -15,14 +15,14 @@
 
             @foreach (var item in Model)
             { 
-                <article class="col-xs-3 panel">
+                <article class="col-xs-3 panel" >
                     <section class="panel-img-container">
                         <img src="@item.MessageImage" alt="House" class="panel-img" />
                     </section>
-                    <section>
-                        <p class="quicksand-light-32 panel-heading">@item.MessageHeader</p>
+                    <section ng-model ="ServicesHeader[@item.ID]" edit-callback="editMade(text, @item.ID)" content-editable>
+                        <p class="quicksand-light-32 panel-heading" >@item.MessageHeader</p>
                     </section>
-                    <section>
+                    <section ng-model ="ServicesDescription[@item.ID]" edit-callback="editMade(text, @item.ID)" content-editable>
                         <p class="mont-light-light-18 panel-summary">@item.Message</p>
                     </section>
                     <section class="panel-footer">
