--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
                             </ul>
                         </li>
                         <li class="donate"><a onclick="document.getElementById('loginScn').style.display = 'block'; w3_open()">Login</a></li>@*TODO: This needs linked to the action when the Login Page*@
+                        <!--<li class="donate"><a data-toggle="modal" data-target="#loginScn">Login</a></li>-->
                         <li class="donate"><a asp-area="" asp-controller="Home" asp-action="About">Donate</a></li>@*TODO: This needs linked to the Media Section of the Donate Page*@
 
                     </ul>
