changed razor tag to add the images

--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                     <div class="boxes">
                         <article class="col-xs-3 panel">
                             <section class="panel-img-container">
-                                <img src="@Html.DisplayFor(modelItem => item.MessageImage)" alt="House" class="panel-img" />
+                                <img src="@Url.Content(@item.MessageImage)" alt="House" class="panel-img" />
                             </section>
                             <section>
                                 <p class="quicksand-light-32 panel-heading">@Html.DisplayFor(modelItem => item.MessageHeader)</p>
