Modfied the service messages so that they now populat everything from the DB. Still need to fix HTML tags so that they line up in a row and not stack.

--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                                     <p class="quicksand-light-32 panel-heading">@Html.DisplayFor(modelItem => item.MessageHeader)</p>
                                 </section>
                                 <section>
-                                    <p class="mont-light-light-18 panel-summary">Located in the heart of downtown Ogdece a. @Html.DisplayFor(modelItem => item.Message)</p>
+                                    <p class="mont-light-light-18 panel-summary">@Html.DisplayFor(modelItem => item.Message)</p>
                                 </section>
                                 <section class="panel-footer">
                                     <p class="quicksand-light-24-green"><a href="#">Learn more ></a></p>
