--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -2,42 +2,56 @@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div id="staff" >
-    <div class="row">
-        <h3>Staff Information</h3>
-        <div id="add_img" class="col-xs-6">
-                    <img class="staff_pic" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
-                    <button class="col-xs-push-2 col-xs-8">Select Image</button>
+<div id="staff" class="container_modal1">
+    <div id="staff2" class="container_modal2">
+        <div class="row">
+            <div class="image row">
+                <img class="header_img col-xs-push-3 col-xs-6" src="~/images/yf_logo.svg" />
+            </div>
+            <h3 class="row">Staff Information</h3>
+
+            <br />
+
+            <div id="add_img" class="col-xs-5">
+                <img class="staff_pic" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
+                <br />
+                <button class="col-xs-push-2 col-xs-8">Select Image</button>
+            </div>
+
+            <div id="staff_info" class="col-xs-7">
+                <div class="fixed_width">
+                    <label>Name:</label>
+                    <input type="text" name="staff_name" required />
+                </div>
+                <div class="fixed_width row">
+                    <div>
+                        <label>Title:  </label>
+                        <input type="text" name="staff_title" required />
+                        <button id="addTitle">+</button>
+                    </div>
+                </div>
+                <div class="fixed_width">
+                    <label>Email:</label>
+                    <input type="text" name="staff_email" required />
+                </div>
+                <div>
+                    <label>Current Staff Member?</label>
+                    <!--<div id="radio">-->
+                        <label>Yes</label>
+                        <input type="radio" name="current" value="yes" />
+                        <label>No</label>
+                        <input type="radio" name="current" value="no" />
+                    <!--</div>-->
+                </div>
+            </div>
         </div>
 
-        <div id="staff_info" class="col-xs-6">
-            <label>Name: </label>
-            <input type="text" name="staff_name" required />
-
-            <br />
-
-            <label>Title: </label>
-            <input type="text" name="staff_title" required/>
-        
-            <br />
-
-            <label>Email: </label>
-            <input type="text" name="staff_email" required/>
-
-            <br />
-
-            <label>Current Staff Member?</label>
-            <br />
-            <label>Yes</label>
-            <input type="radio" name="current" value="yes"/>
-            <label>No</label>
-            <input type="radio" name="current" value="no"/>
+        <br />
+        <div id="buttons" class="row">
+            <button class="col-xs-push-5 col-xs-3 btn-lg btn-default">Cancel</button>
+            <button class="col-xs-push-6 col-xs-3 btn-lg btn-success">Submit</button>
+            
+            
         </div>
-    </div>
-
-    <!--<br />-->
-    <div class="row">
-        <button class="col-xs-push-1 col-xs-4 btn-lg btn-default">Cancel</button>
-        <button class="col-xs-push-3 col-xs-4 btn-lg btn-success">Submit</button>
     </div>
 </div>
