--- a/MyYouthFutures/Views/Shared/_Login.cshtml
+++ b/MyYouthFutures/Views/Shared/_Login.cshtml
@@ -5,12 +5,9 @@
 <div id="loginCase">
     <label id="cncl"><span class="glyphicon glyphicon-remove"></span></label>
 
-    <div id="loginModal" class="login">
-        <form>
-            <!--Image, if needed-->
+    <div id="loginModal" class="container_modal1 login">
+        <form class="container_modal2">
             <div class="image">
-                <!--<h3>Login</h3>-->
-                <!--<a class="navbar-brand" href="#"><img src="~/images/yf_logo.svg" alt="Youth Futures Logo" /></a>-->
                 <img src="~/images/yf_logo.svg" />
             </div>
 
@@ -27,17 +24,12 @@
                     <input type="password" name="pswrd" required />
                 </div>
 
-                <!--<div class="rw3">-->
-                <!--Buttons-->
-                <button id="sbmt" type="submit">Login</button>
-                <!--<button id="cncl" type="button">Cancel</button>-->
-                <!--</div>-->
+                <button id="sbmt" type="submit" class="btn-lg btn-success">Login</button>
 
                 <div class="rw4">
                     <p><a>Forgot Your Password?</a></p>
                     <p><a>Forgot Your Username?</a></p>
                 </div>
-                <!--<button id="cncl" type="button">Cancel</button>-->
             </div>
         </form>
     </div>
