Made Login css more condensed
removed some css,
used bootstrap as much as possible

--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 }
 
 <!--<button onclick="document.getElementById('staffPop').style.display = 'block'">Show Staff</button>-->
-<button type="button" data-toggle="modal" data-target="#staffPop">Show Staff</button>
-<div id="staffPop" class="modal">
+<button type="button" data-toggle="modal" data-target="#staffPopup">Show Staff</button>
+<div id="staffPopup" class="modal">
     @{ Html.RenderPartial("../Popups/_AddStaff");}
 </div>
 
