--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -48,7 +48,7 @@
 
         <br />
         <div id="buttons" class="row">
-            <button class="col-xs-push-5 col-xs-3 btn-lg btn-default">Cancel</button>
+            <button class="col-xs-push-5 col-xs-3 btn-lg btn-default" data-toggle="modal" data-target="#staffPopup">Cancel</button>
             <button class="col-xs-push-6 col-xs-3 btn-lg btn-success">Submit</button>
             
             
