--- a/MyYouthFutures/Views/Popups/_Login.cshtml
+++ b/MyYouthFutures/Views/Popups/_Login.cshtml
@@ -6,7 +6,7 @@
 
         <div id="loginModal" class="container_modal1 login">
 
-            <div class="container_modal2">
+            <form class="container_modal2">
                 <img class="col-xs-12" src="~/images/yf_logo.svg" />
 
                 <div class="row">
@@ -25,6 +25,6 @@
                     <p><a class="col-xs-push-2 col-xs-8">Forgot Your Password?</a></p>
                     <p><a class="col-xs-push-2 col-xs-8">Forgot Your Username?</a></p>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
