--- a/MyYouthFutures/Views/Popups/_AddDonor.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddDonor.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <div id="donor" class="container_modal1">
-    <div id="donor2" class="container_modal2">
+    <form id="donor2" class="container_modal2">
         <div class="row">
             <div class="titleBox row">
                 <img class="header_img col-xs-1" src="~/images/yf_house.png" />
@@ -51,5 +51,5 @@
 
 
         </div>
-    </div>
+    </form>
 </div>
