--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -27,8 +27,10 @@
             <section class="col-xs-12">
                 @foreach (var item in Model)
                 {
+                    if (item.ID == 1)
+                    {
                     <p class="mont_regular_22_darkgray">@item.ArticleText</p>
-
+                    }
                 }
             </section>
         </div>
@@ -52,7 +54,13 @@
     <div class="container-fluid">
         <div class="row history_text">
             <section class="col-xs-12">
-                <p class="mont_regular_22_darkgray">Youth Futures was founded by Kristen Mitchell and Scott Catuccio, who had been conceptually planning to provide shelter and case management services to youth for over six years. It was identified that there was a lack of shelter services for the estimated 5,000 youth who experience homelessness for at least one night a year in Utah, so Scott and Kristen began researching other states that provide shelter services to youth. It was quickly identified that the largest barrier to providing services to homeless youth in Utah was a law prohibiting the opening of shelter facilities for youth. </p>
+                @foreach (var item in Model)
+                {
+                    if (item.ID == 2)
+                    {
+                    <p class="mont_regular_22_darkgray">@item.ArticleText</p>
+                    }
+                }
             </section>
         </div>
     </div>
