--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -74,7 +74,13 @@
     <div class="container-fluid">
         <div class="row history_text">
             <section class="col-xs-12">
-                <p class="mont_regular_22_darkgray">During the 2014 Legislative Session, HB132 was passed, which allowed for rewriting the prohibitive law and drafting licensing procedures for residential support programs for temporary homeless youth shelter in Utah. Youth Futures and other homeless youth service providers participated in the rules writing process. The licensing rules enrolled on October 22, 2014, and the founders began to set-up the facility for licensing. Youth Futures received the first license for homeless youth shelter granted in the State of Utah under the new law. </p>
+                @foreach (var item in Model)
+                {
+                    if (item.ID == 3)
+                    {
+                        <p class="mont_regular_22_darkgray">@item.ArticleText</p>
+                    }
+                }
             </section>
         </div>
     </div>
