Modified staff modal to look more like the donor modal

--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -3,55 +3,52 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <div id="staff" class="container_modal1">
-    <form id="staff2" class="container_modal2">
-        <div class="row">
-            <div class="image row">
-                <img class="header_img col-xs-push-3 col-xs-6" src="~/images/yf_logo.svg" />
-            </div>
-            <h3 class="row">Staff Information</h3>
-
-            <br />
-
-            <div id="add_img" class="col-xs-5">
-                <img class="staff_pic" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
-                <br />
-                <button class="col-xs-push-2 col-xs-8">Select Image</button>
+    <div id="staff2" class="container_modal2">
+        <div class="">
+            <div class="titleBox row">
+                <img class="header_img col-xs-push-1 col-xs-10" src="~/images/yf_house.png" />
+                <h4 class="title col-xs-push-2 col-xs-4">Staff Information</h4>
             </div>
 
-            <div id="staff_info" class="col-xs-7">
-                <div class="fixed_width">
-                    <label>Name:</label>
-                    <input type="text" name="staff_name" required />
-                </div>
-                <div class="fixed_width row">
-                    <div>
-                        <label>Title:  </label>
-                        <input type="text" name="staff_title" required />
-                        <button id="addTitle">+</button>
+            <form class="row">
+                <div class="col-xs-6">
+                    <div id="add_img" class="row">
+                        <img class="staff_pic col-xs-push-1 col-xs-10" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
+                        <button class="col-xs-push-2 col-xs-8">Select Image</button>
                     </div>
                 </div>
-                <div class="fixed_width">
-                    <label>Email:</label>
-                    <input type="text" name="staff_email" required />
-                </div>
-                <div>
-                    <label>Current Staff Member?</label>
-                    <!--<div id="radio">-->
-                        <label>Yes</label>
-                        <input type="radio" name="current" value="yes" required/>
-                        <label>No</label>
-                        <input type="radio" name="current" value="no" required/>
-                    <!--</div>-->
-                </div>
-            </div>
-        </div>
 
-        <br />
+                <div id="staff_info" class="col-xs-6">
+                    <div class="fixed_width">
+                        <label>Name:</label>
+                        <input type="text" name="staff_name" required />
+                    </div>
+                    <div class="fixed_width row">
+                        <div>
+                            <label>Title:  </label>
+                            <input type="text" name="staff_title" required />
+                            <button id="addTitle">+</button>
+                        </div>
+                    </div>
+                    <div class="fixed_width">
+                        <label>Email:</label>
+                        <input type="text" name="staff_email" required />
+                    </div>
+                    <div>
+                        <label>Current Staff Member?</label>
+                        <label>Yes</label>
+                        <input type="radio" name="current" value="yes" required />
+                        <label>No</label>
+                        <input type="radio" name="current" value="no" required />
+                    </div>
+                </div>
+            </form>
+        </div>
         <div id="buttons" class="row">
             <button class="col-xs-push-5 col-xs-3 btn-lg btn-default" data-toggle="modal" data-target="#staffPopup">Cancel</button>
             <button type="submit" class="col-xs-push-6 col-xs-3 btn-lg btn-success">Submit</button>
             
             
         </div>
-    </form>
+    </div>
 </div>
