--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -37,7 +37,8 @@
     </div>
     <div class="container">
         <div class="row history_text_pics">
-            <section class="col-xs-12  col-md-4 first_img ">
+            @await Component.InvokeAsync("Founder")
+            @*<section class="col-xs-12  col-md-4 first_img ">
                 <img src="~/images/history_kristen_scott.jpg" class="img-responsive center-block" title="Kristen and Scott" alt="Kristen and Scott">
                 <p class="mont_light_14_white hist_subtitle">Kristen and Scott</p>
             </section>
@@ -48,7 +49,7 @@
             <section class="col-xs-12 col-md-4 third_img">
                 <img src="~/images/history_kristen.jpg" class="img-responsive center-block" title="Kristen" alt="Kristen">
                 <p class="mont_light_14_white hist_subtitle">Kristen</p>
-            </section>
+            </section>*@
         </div>
     </div>
     <div class="container-fluid">
