--- a/MyYouthFutures/Views/Shared/Components/intro/Defualt.cshtml
+++ b/MyYouthFutures/Views/Shared/Components/intro/Defualt.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyYouthFutures.Models.introArticle>
+﻿@*@model IEnumerable<MyYouthFutures.Models.introArticle>
 
 @foreach (var item in Model)
 {
@@ -6,4 +6,4 @@
     {
         <p class="mont_regular_22_darkgray">@item.ArticleText</p>
     }
-}
+}*@
