fixed minor html errors

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
-        <script src="~/js/secondaryScripts.js" asp-append-version="true"></script>
+        <script src="~/js/secondaryScripts.js"></script>
         <script src="~/js/gen_validatorv31.js" asp-append-version="true"></script>
         <script src="~/js/login.js" asp-append-version="true"></script>
         <script src="~/lib/angular/angular.js"></script>
