Trying to figure out staff picture

--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -13,8 +13,11 @@
             <div class="row">
                 <div class="col-xs-6">
                     <div id="add_img" class="row">
-                        <img class="staff_pic col-xs-push-1 col-xs-10" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
-                        <button type="button" class="col-xs-push-2 col-xs-8">Select Image</button>
+                        <!--@{ var val2 = "?";}-->
+                        <img id="staff_pic" class="col-xs-push-1 col-xs-10" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
+                        <input type="file" id="staff_file" class="col-xs-push-1 col-xs-10" required/><!--style="display:none"-->
+                        <button id="staff_btn" type="button" onclick="$('#staff_btn').click(function () { $('#staff_file').trigger('click');})" class="col-xs-push-2 col-xs-8">Select Image</button>
+                        <!--<label id="lbl1">@val2</label>-->
                     </div>
                 </div>
 
