Commented out add staff title plus sign.

--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -30,7 +30,7 @@
                         <div>
                             <label>Title:  </label>
                             <input type="text" name="staff_title" required />
-                            <button id="addTitle" type="button">+</button>
+                            <!--<button id="addTitle" type="button">+</button>--><!--Will add back once I figure out how to add new titles (if needed)-->
                         </div>
                     </div>
                     <div class="fixed_width">
