Working modal for editing content

--- a/MyYouthFutures/Views/Services_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Edit.cshtml
@@ -1,9 +1,7 @@
 ﻿@model MyYouthFutures.Models.Services_Message
-
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
-
 <h2>Edit</h2>
 
 <h4>Services</h4>
