--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@Model IEnumerable<MyYouthFutures.Models.introArticle>
+﻿@Model ItemViewModel 
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
@@ -25,11 +25,11 @@
     <div class="container-fluid">
         <div class="row history_text">
             <section class="col-xs-12">
-                @foreach (var item in Model)
+                @foreach (introArticle ia in Model.introArticles)
                 {
-                    if (item.ID == 1)
+                    if (ia.ID == 1)
                     {
-                    <p class="mont_regular_22_darkgray">@item.ArticleText</p>
+                    <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
                     }
                 }
             </section>
@@ -37,7 +37,7 @@
     </div>
     <div class="container">
         <div class="row history_text_pics">
-            @await Component.InvokeAsync("Founder")
+            @*@await Component.InvokeAsync("Founder")*@
             @*<section class="col-xs-12  col-md-4 first_img ">
                 <img src="~/images/history_kristen_scott.jpg" class="img-responsive center-block" title="Kristen and Scott" alt="Kristen and Scott">
                 <p class="mont_light_14_white hist_subtitle">Kristen and Scott</p>
@@ -55,11 +55,11 @@
     <div class="container-fluid">
         <div class="row history_text">
             <section class="col-xs-12">
-                @foreach (var item in Model)
+                @foreach (introArticle ia in Model.introArticles)
                 {
-                    if (item.ID == 2)
+                    if (ia.ID == 2)
                     {
-                    <p class="mont_regular_22_darkgray">@item.ArticleText</p>
+                    <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
                     }
                 }
             </section>
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row history_text">
             <section class="col-xs-12">
-                @foreach (var item in Model)
+                @foreach (introArticle ia in Model.introArticles)
                 {
-                    if (item.ID == 3)
+                    if (ia.ID == 3)
                     {
-                        <p class="mont_regular_22_darkgray">@item.ArticleText</p>
+                        <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
                     }
                 }
             </section>
